tests/baselines/reference/assigningFromObjectToAnythingElse.errors.txt
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(3,1): error TS2322: Type 'Object' is not assignable to type 'RegExp'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Property 'exec' is missing in type 'Object'.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(5,17): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(6,17): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(8,5): error TS2322: Type 'Object' is not assignable to type 'Error'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Property 'name' is missing in type 'Object'.


==== tests/cases/compiler/assigningFromObjectToAnythingElse.ts (4 errors) ====
    var x: Object;
    var y: RegExp;
    y = x;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'RegExp'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Property 'exec' is missing in type 'Object'.
    
    var a: String = Object.create<Object>("");
                    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    var c: String = Object.create<Number>(1);
                    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    var w: Error = new Object();
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'Error'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Property 'name' is missing in type 'Object'.
    